Version 1.56 (?? May 01)
- Document the hierarchy.
- Use MP_Float.

Version 1.55 (29 May 01)
- warning bcc fixed (unused variable)

Version 1.54 (28 May 01)
- VC++ fix.
- Add public: in example_tds.C.

Version 1.53 (23 May 01)
- Put Triangulation_hierarchy_vertex_base_3 in its own file.
- VC++ for()-scope workaround.
- example_tds.C update to the new TDS::insert() interface.

Version 1.52 (22 May 01)
- Regular works again.
- Fix memleak in TDS.

Version 1.51 (18 May 01)
- remove
- bug fix in is_edge of tds
- all interfaces of tds.insertxxx() changed
- tds.clear modified
- even more for() scope VC++ bug workarounds.
- fix BCC/KCC warning.

Version 1.50 (4  May 01)
- Fix recently introduced bug in the hierarchy when dimension() < 3.
- more for() scope VC++ bug workaround.
- Don't try to compile demo.C on Windows as it required Geomview.
- Apply the full Delaunay test-suite to the hierarchy, this showed some bugs.
- Merge the two insert() functions in one, using a default argument for the
  starting cell.
- Finally update the traits to the last kernel, and documentation.
- Regular triangulation speed up.
- Added push_back() member functions.

Version 1.49 (13 Apr 01)
- locate() interface changes to match the 2D case wrt the default start.
- minor hierarchy speed up.

Version 1.48 (13 Apr 01)
- for() scope VC++ bug workaround.
- facet circulator around an edge fix.

Version 1.47 (9 Apr 01)
- member template definition in class body for VC++.

Version 1.46 (3 Mar 01)
- violates() optimization (remove() speed up). [syl]
- new insert_conflict() in the TDS. [syl]
- rand4() can now be inline (locate() speed up). [syl]
- New internal typedef Conflict_set to allow later testing of hash_set<>. [syl]
- "int in_conflict_flag" in ds_cell to speed up insert(). [syl]
- Point_2 include and typedef removed from Triangulation_geom_traits_3.h [af]
- add dummy variable to cheat MSVC++
- added Delaunay__traingulation_3::fill_hole_3d_ear, an alternative