@@ -139,10 +139,10 @@ by \ccc{p}, \ccc{q}, and \ccc{r} on which \ccc{s} lies.
 The triangulation hierarchy uses the traits class provided by
 \ccc{Tr::Geom_traits}, which must satisfy the following additional predicate:
 
-\ccNestedType{Less_distance_to_point_3}{Predicate object.
-Must provide a constructor taking a \ccc{Point p} as argument, as well as an
-\ccc{bool operator()(Point q, Point r)} returning true iff \ccc{q} is closer
-to \ccc{p} than \ccc{r} is.}
+\ccNestedType{Compare_distance_3}{Predicate object.
+Must provide the operator \ccc{bool operator()(Point p, Point q, Point r)}
+which compares the distance between \ccc{p} and \ccc{q} to the distance
+between \ccc{p} and \ccc{r}.}
 
 
 \subsubsection{To be used by \protect 
