@@ -1,6 +1,7 @@
 Version 1.56 (?? May 01)
 - Document the hierarchy.
 - Use MP_Float.
+- Hierarchy traits now uses Compare_distance_3.
 
 Version 1.55 (29 May 01)
 - warning bcc fixed (unused variable)
